static/css/less_css/less/tba/tba_gameday.less
@chatWidth: 300px;
@socialWidth: 250px;
@tickerWidth: 300px;
@videoContainerTopOffset: 1px;
@matchBarHeight: 36px;

body {
  margin: 0;
  padding: 0;
  overflow: hidden;
  background: #000000;
}

.gameday {
  .nav, .navbar, .navbar-inner,
  .container, .brand,
  .dropdown, .dropdown-toggle,
  .chat, .chat-toggle,
  .social, .social-toggle,
  .ticker, .ticker-toggle,
  .settings, .settings-button {
    padding: 0 !important;
    margin: 0 !important;
    min-height: 30px !important;
    height: 30px !important;
    min-height: auto !important;
    color: #ffffff !important;
  }

  .navbar-fixed-top {
    position: static;
  }

  .chat_active, .social_active, .ticker_active {
    background: @gray !important;
  }

  .gameday-container {
    width: auto;
    margin-left: 10px !important;
  }

  .gameday-brand {
    background-image: url('/images/tba_blue_lamp_navbar.png');
    background-repeat: no-repeat;
    background-position: left center;
    width: 600px;
  }

  .gameday-title {
    vertical-align: middle;
    padding-left: 25px;
    font-size: 20px;
    font-weight: 600;
  }

  a {
    color: #ffffff;
    font-size: 12px;
    font-weight: normal;
    padding-left: 10px;
  }

  .dropdown-toggle, .chat-toggle, .social-toggle, .ticker-toggle, .settings-button {
    padding: 6px 8px !important;
    height: 18px !important;
  }

  .dropdown:hover, .chat:hover, .social:hover, .ticker:hover, .settings:hover {
    background-color: @gray;
  }

  .dropdown-menu {
    margin: 0;

    .layout-choice, .layout-choice:hover {
      background-repeat: no-repeat;
      filter: none;
    }

    .layout_0 {
      background-image: url('/images/icons/tba-gameday-sprite.png');
      background-position: 95% -5px;
    }

    .layout_1 {
      background-image: url('/images/icons/tba-gameday-sprite.png');
      background-position: 95% -40px;
    }

    .layout_2 {
      background-image: url('/images/icons/tba-gameday-sprite.png');
      background-position: 95% -75px;
    }

    .layout_3 {
      background-image: url('/images/icons/tba-gameday-sprite.png');
      background-position: 95% -110px;
    }

    .layout_6 {
      background-image: url('/images/icons/tba-gameday-sprite.png');
      background-position: 95% -145px;
    }

    .layout_4 {
      background-image: url('/images/icons/tba-gameday-sprite.png');
      background-position: 95% -180px;
    }

    .layout_5 {
      background-image: url('/images/icons/tba-gameday-sprite.png');
      background-position: 95% -215px;
    }
  }

  ul.nav li.dropdown:hover ul.dropdown-menu{
    display: block;
  }

}

.social_panel {
  position: fixed;
  top: 30px + @videoContainerTopOffset;
  left: 0px;
  bottom: 0px;
  width: @socialWidth;
  background-color: @gray-lighter;
  visibility: hidden;

  #twitter-widget {
    background-color: #000000;
    height: 100%;
    width: 100%;
  }
}

.social_panel_active {
  visibility: visible;
}

.chat_panel {
  position: fixed;
  top: 30px + @videoContainerTopOffset;
  right: 0px;
  bottom: 0px;
  width: @chatWidth;
  background-color: @gray-lighter;
  visibility: hidden;

  #chat-info-background {
    position: absolute;
    background-color: #000000;
    background: rgba(0, 0, 0, 0.7);
    height: 100%;
    width: 100%;

    #chat-info {
      margin: 50px 25px;
    }
  }
}

.ticker_panel {
  position: fixed;
  top: 30px + @videoContainerTopOffset;
  left: 0px;
  bottom: 0px;
  width: @tickerWidth;
  background-color: @gray-lighter;
  visibility: hidden;
  overflow: auto;

  #ticker-info-background {
    position: absolute;
    background-color: #000000;
    background: rgba(0, 0, 0, 0.7);
    height: 100%;
    width: 100%;

    #ticker-info {
      margin: 50px 25px;
    }
  }
}
.ticker_panel_active {
  visibility: visible;
}

.div_helper {
    display: inline-block;
    vertical-align: middle;
    height: 100%;
}

.remove-following {
  cursor: pointer;
}

.video_buttons {
  cursor: move;
}

.webcasts_panel {
  overflow: hidden;
  position: absolute;
  top: 30px;
  bottom: 0px;
  right: 0px;
  left: 0px;
  z-index: 105;
}

.webcasts_panel_social_active {
  left: @socialWidth;
}

.webcasts_panel_chat_active {
  right: @chatWidth;
}

.webcasts_panel_ticker_active {
  left: @tickerWidth;
}

.video_container {
  position: absolute;
  top: @videoContainerTopOffset;
  bottom: 0px;
  left: 0px;
  right: 0px;
  z-index:0;
}

.view {
  text-align: center;
  margin: 0;
  padding: 0;
  background: @gray-darker;
  outline: #000000 1px solid;
  visibility: visible;
  color: #ffffff;
  position: absolute;
}

.drag-helper {
  width: 150px;
  text-align: center;
  z-index: 100000;
  background: @gray-lighter;
  color: #000000;
  border-radius: 4px;
  position: fixed;
}

.webcasts-show {
  display: block;
}

.match_bar {
  background-color: @gray-darker * 0.5;
  z-index: 4999;
  width: 100%;
  height: @matchBarHeight;
  position: absolute;
  bottom: 0px;
  left: 0px;
  text-align: left;
  overflow: hidden;

  .matches {
    width: 200%;
    height: 100%;
  }

  .finished_match_red {
    background-color: @TBAredDarker;
  }

  .finished_match_blue {
    background-color: @TBAblueDarker;
  }

  .finished_match_tie {
    background-color: @TBApurpleDarker;
  }

  .upcoming_match {
    background-color: transparent;
  }

  .followed_match {
    background-color: #ffc40d * 0.8;

    .match-number {
      color: @gray-lighter;
    }

    .red {
      color: #CC0000;
    }

    .blue {
      color: #0044CC;
    }
  }

  .match {
    height: 100%;
    width: auto;
    border-right: 1px #ffffff solid;
    display: inline-block;
    .alliances {
      font-weight: bold;
    }
  }

  .match-number {
    color: #ffffff;
    font-size: 19px;
    width: auto;
    display: inline-block;
    line-height: @matchBarHeight;
    margin: 0 10px 0 10px;
    float: left;
  }

  .alliances {
    display: inline-block;
    height: 100%;
    width: auto;
    float: left;
    margin: 1px 10px 0 0;
  }

  .red {
    color: #FF0000;
  }

  .blue {
    color: #0066FF;
  }

  .red, .blue {
    font-size: 13px;
    width: auto;
    height: 50%;
    display: block;
  }

  .match-bar-info {
    color: #ffffff;
    font-size: 14px;
    width: auto;
    display: inline-block;
    line-height: @matchBarHeight;
    margin: 0 10px 0 10px;
    float: left;
  }
}

.overlay {
  background-image: -moz-linear-gradient(top, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.6) 60px, rgba(0,0,0,0) 100px);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.8)), color-stop(60px,rgba(0,0,0,0.6)), color-stop(100px,rgba(0,0,0,0)));
  background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.6) 60px,rgba(0,0,0,0) 100px);
  background-image: -o-linear-gradient(top, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.6) 60px,rgba(0,0,0,0) 100px);
  background-image: linear-gradient(top, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.6) 60px,rgba(0,0,0,0) 100px);
  z-index: 5000;
  width: 100%;
  height: 50%;
  position: absolute;
  top: 0px;
  left: 0px;
  pointer-events: none;

  .overlay-title {
    font-size: 24px;
    color: white;
    float: left;
    margin: 15px;
  }

  .view-close, .swap {
    padding: 3px;
    margin: 2px;
    pointer-events: all;
    cursor: pointer;
    position: absolute;
  }

  .view-close {
    top: 0;
    right: 0;
  }

  .swap {
    top: 25px;
    right: 0;
  }
}

